# okra

./: README.md  pyproject.toml
examples/: README.md
okra/: __init__.py  okra.py
tests/: test_okra.py
tests/configs/: short-config-1.yaml  short-config-2.yaml
tests/schemas/: short-schema.yaml
