[tool.poetry]
name = "okra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = "^2.2.0"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
torch = "^1.11.0"
torchvision = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
